[package]
name = "bevy_symbios_texture"
version = "0.2.1"
edition = "2024"
authors = ["Janus"]
description = "Algorithmic texture generator for Bevy."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/bevy_symbios_texture"
keywords = ["texture", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[dependencies]
bevy = "0.18"
noise = "0.9"
rand = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
symbios-genetics = "0.1"

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"

[[bench]]
name = "bench_main"
harness = false

[profile.bench]
debug = true
