[package]
name = "bevy_symbios_texture"
version = "0.4.0"
edition = "2024"
authors = ["Janus"]
description = "Algorithmic texture generator for Bevy."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/bevy_symbios_texture"
keywords = ["texture", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[features]
default = []
egui = ["dep:bevy_egui"]

[dependencies]
bevy = "0.18"
bevy_egui = { version = "0.39", optional = true }
noise = "0.9"
rand = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
symbios-genetics = { path = "../symbios-genetics" }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"
bevy_egui = "0.39"

[[example]]
name = "texture_viewer"
required-features = ["egui"]

[[example]]
name = "procedural_material"

[[example]]
name = "animated_rust"

[[bench]]
name = "bench_main"
harness = false

[profile.bench]
debug = true
